TEST_PROGRAMS/INVALID/yanis_hattab/invalid1.min
var x: int;

var y: float;

var z: double;


x = 10;

y = 1.0;
